fix : 正規表現で数値をwrapしてフォントを変えるように修正ほか

--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -20,6 +20,11 @@ body {
   line-height: 1.15;
 }
 
+.num {
+  font-family: Shippori Mincho B1 , "游明朝" , "Yu Mincho" , "游明朝体" , "YuMincho" ,
+   "ヒラギノ明朝 Pro W3" , "Hiragino Mincho Pro" , "HiraMinProN-W3" ,　serif;
+}
+
 .top-38px{
   top: 38px;
 }
